apps/observability-metrics/base/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway
  hostnames:
    - "metrics.${DOMAIN}"
  rules:
    - backendRefs:
        - name: prometheus-community-grafana
          namespace: observability
          port: 80
